--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.deco.moodify">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,19 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:noHistory="true">
+        <activity android:name=".IntroActivity"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:noHistory="true">
             // An intent filter that will receive the response
             // from the authentication service
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-
-                // this needs to match the scheme and host of the redirect URI as defined in My applications page
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                // this needs to match the scheme and host of the redirect URI as defined in My
+                applications page
                 <data
                     android:host="callback"
-                    android:scheme="http"/>
+                    android:scheme="http" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,6 +35,7 @@
             </intent-filter>
             <intent-filter>
                 <data android:scheme="com.deco.moodify" />
+
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
